--- a/docs/intera14_filter/src/scss/style.scss
+++ b/docs/intera14_filter/src/scss/style.scss
@@ -9,13 +9,10 @@
 
 body {
   position: relative;
-  background-color: antiquewhite;
-}
-
-.wrapper {
-  display: grid;
-  place-items: center;
-  height: 100vh;
+  backdrop-filter: blur(10px);
+  background: url(../images/bg_filter.jpg) no-repeat center top /cover;
+  padding-bottom: 60px;
+  min-height: 100vh;
 }
 
 
@@ -23,7 +20,7 @@ body {
 // image_board
 // ===================================================================
 .select {
-  margin-top: 60px;
+  padding-top: 60px;
   &_list {
     display: flex;
     gap: 10px;
@@ -50,7 +47,7 @@ body {
   }
 }
 .board {
-  margin-top: 80px;
+  margin-top: 40px;
   &_list {
     list-style: none;
     // width: 860px;
