--- a/docs/intera16_free/src/scss/style.scss
+++ b/docs/intera16_free/src/scss/style.scss
@@ -10,7 +10,8 @@
 body {
   position: relative;
   backdrop-filter: blur(10px);
-  background: url(https://source.unsplash.com/200x200/) no-repeat center top /cover;
+  // background: url(https://source.unsplash.com/200x200/) no-repeat center top /cover;
+  background-color: pink;
   min-height: 100vh;
   display: grid;
   place-items: center;
